force-app/main/default/objects/SVMXA360__ApplicableProduct__c/SVMXA360__ApplicableProduct__c.object-meta.xml
<CustomObject>
    <description>Contains criteria records for informing a Maintenance Plan Template about which Products or Product Families apply to the Template and can be leveraged in creating a Maintenance Plan for specific assets.</description>
    <label>Applicable Product</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicable Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>