force-app/main/default/objects/SVMXA360__ApplicableProduct__c/fields/SVMXA360__MaintenancePlanTemplateId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanTemplateId__c</fullName>
    <description>The Maintenance Plan Template with which this Applicable Product record is associated.</description>
    <inlineHelpText>The Maintenance Plan Template with which this Applicable Product record is associated.</inlineHelpText>
    <label>Maintenance Plan Template</label>
    <referenceTo>SVMXA360__MaintenancePlanTemplate__c</referenceTo>
    <relationshipLabel>Applicable Products</relationshipLabel>
    <relationshipName>Applicable_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>