force-app/main/default/objects/SVMXA360__ApplicableProduct__c/fields/SVMXA360__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductFamily__c</fullName>
    <description>The product family of the Applicable Product. The picklist values should align with the &apos;Product Family&apos; field on the Product object. When a Maintenance Plan is created using the Maintenance Plan Template, this product family retrieves the Assets linked to the source record to create Maintenance Assets on the Plan.</description>
    <inlineHelpText>The product family of the Applicable Product. The picklist values should align with the &apos;Product Family&apos; field on the Product object. When a Maintenance Plan is created using the Maintenance Plan Template, this product family retrieves the Assets linked to the source record to create Maintenance Assets on the Plan.</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__ProductFamily</valueSetName>
    </valueSet>
</CustomField>