force-app/main/default/objects/SVMXA360__ApplicableProduct__c/fields/SVMXA360__ProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The indicated product of the Applicable Product, based on the lookup to the Product object. When a Maintenance Plan is created using the Maintenance Plan Template, this product retrieves the Assets linked to the source record to create Maintenance Assets on the Plan.</description>
    <inlineHelpText>The indicated product of the Applicable Product, based on the lookup to the Product object. When a Maintenance Plan is created using the Maintenance Plan Template, this product retrieves the Assets linked to the source record to create Maintenance Assets on the Plan.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Applicable Products</relationshipLabel>
    <relationshipName>Applicable_Products</relationshipName>
    <type>Lookup</type>
</CustomField>