force-app/main/default/objects/SVMXA360__ApplicableProduct__c/fields/SVMXA360__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A unique key for the Applicable Product.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A unique key for the Applicable Product.</inlineHelpText>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>