force-app/main/default/objects/SVMXA360__ApplicableProduct__c/fields/SVMXA360__WorkTypeId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkTypeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The indicated Work Type for the Product/Product Family of this Applicable Product. The value in this field will be mapped to the Work Type field on the Maintenance Asset (s) created based on this Applicable Product record.</description>
    <inlineHelpText>The indicated Work Type for the Product/Product Family of this Applicable Product. The value in this field will be mapped to the Work Type field on the Maintenance Asset (s) created based on this Applicable Product record.</inlineHelpText>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Applicable Products</relationshipLabel>
    <relationshipName>Applicable_Products</relationshipName>
    <type>Lookup</type>
</CustomField>